Website CSS Sizing Fix
Turned down the minimum size (in pixels) that items and text can shrink to. It should fix the sizing problems across monitors of different pixel densities. I personally think this new minimum is way too low and will likely be bumped up to some middle ground later on, but for now I'm leaving it here so I can illustrate the issue to the team.

--- a/NASCA-site/css/index.css
+++ b/NASCA-site/css/index.css
@@ -125,29 +125,29 @@ colors{
   position: relative;
   display: inline-flex;
   height: 17.7174vh;
-  min-height: 163px;
+  min-height: 81.5px; /*163px;*/
   width: 100%;
   min-width: 800px;
 }
 
 #header-positioner-height-offset {
   height: 17.7174vh;
-  min-height: 163px;
+  min-height: 81.5px; /*163px;*/
   width: 100%;
 }
 
 #header-left {
-  min-width: 355px;
-  padding-left: 56px;
-  padding-top: 52px;
+  min-width: 177.5px; /*355px;*/
+  padding-left: 28px; /*56px;*/
+  padding-top: 26px; /*52px;*/
   display: inline-block;
 }
 
 #logo {
-  min-height: 56px;
+  min-height: 28px; /*56px;*/
   height: 50.4505%;
-  width: 226px;
-  min-width: 226px;
+  width: 113px; /*226px;*/
+  min-width: 113px; /*226px;*/
   float: left;
 }
 
@@ -163,14 +163,14 @@ colors{
 
 #logo-verbose {
   overflow: hidden;
-  min-width: 168px;
+  min-width: 134px; /*168px;*/
   height: 100%;
-  padding-left: 26px;
-  padding-top: 5px;
+  padding-left: 26px; /*13px;*/
+  padding-top: 5px; /*2.5px;*/
 }
 
 #logo-verbose img {
-  min-width: 142px;
+  min-width: 71px; /*142px;*/
   width: 100%;
   max-width: 100%;
   height: auto;
@@ -187,17 +187,17 @@ colors{
   top: 0;
   right: -500px;
   height: 31.9018%;
-  min-height: 52px;
-  min-width: 331px;
-  width: 331px;
+  min-height: 26px; /*52px;*/
+  min-width: 165.5px; /*331px;*/
+  width: 165.5px; /*331px;*/
 }
 
 #search {
   position: absolute;
   bottom: 0;
   left: 0;
-  min-height: 26px;
-  min-width: 274px;
+  min-height: 13px; /*26px;*/
+  min-width: 137px; /*274px;*/
   height: 50%;
   width: 82.7795%;
 }
@@ -213,17 +213,17 @@ colors{
 }
 
 #search-text {
-  font-size: 22px;
+  font-size: 11px; /*22px;*/
   width: auto;
   height: 100%;
   display: inline-block;
   margin: 0 auto;
-  line-height: 26px;
+  line-height: 13px; /*26px;*/
 }
 
 #search-input-container {
   height: 100%;
-  min-width: 158px;
+  min-width: 79px; /*158px;*/
   width: 57.6642%;
   margin: 0 auto;
   border-bottom: 2px solid white;
@@ -237,7 +237,7 @@ colors{
   border: none;
   color: white;
   font-weight: 600;
-  font-size: 15px;
+  font-size: 7.5px; /*15px;*/
 }
 
 #search-go {
@@ -253,8 +253,8 @@ colors{
 
 #nav-bar-container {
   height: 42.9448%;
-  min-width: 910px;
-  width: 910px;
+  min-width: 455px; /*910px;*/
+  width: 455px; /*910px;*/
   position: absolute;
   right: 0;
   bottom: 0;
@@ -309,7 +309,7 @@ colors{
   bottom: 0;
   display: none;
   height: 39.2638%;
-  width: 149px;
+  width: 74.5px; /*149px;*/
   display: none;
 }
 
@@ -337,7 +337,7 @@ colors{
 
 #pullout-positioner {
   position: fixed;
-  top: 163px;
+  top: 81.5px; /*163px;*/
   right: -100%;
   z-index: 4;
   height: 100%;
@@ -347,7 +347,7 @@ colors{
 #pullout-container {
   border-left: 2px solid black;
   height: 100%;
-  min-width: 200px;
+  min-width: 100px; /*200px;*/
   width: 11.1732vw;
 }
 
@@ -358,7 +358,7 @@ colors{
 .pullout-list-el {
   color: black;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 8px; /*16px;*/
   text-align: right;
   padding: 14px;
   margin-bottom: 4px;
@@ -378,10 +378,10 @@ colors{
 }
 
 #page {
-  padding-left: 68px;
-  padding-right: 68px;
-  padding-top: 26px;
-  padding-bottom: 12px;
+  padding-left: 34px; /*68px;*/
+  padding-right: 34px; /*68px;*/
+  padding-top: 13px; /*26px;*/
+  padding-bottom: 6px; /*12px;*/
 }
 
 #footer-container {
